-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.0 Beta4
-
None
-
5
-
c86e54fb170345703e7e8d3b75f6ee25c964aff5 (qt/qtbase/dev) 1941ec43ced63a1f82ca9ddad1c71d5179c33b2d (qt/qtbase/5.15) cbfad5e0cc4056ea3aee644311f65c316a10ddf5 (qt/qtbase/6.2), 8051edfdb (dev), e58b4e054 (6.5), 001ecc5d7 (6.6)
-
Qt6_Foundation_ Sprint 8, Qt6_Foundation_ Sprint 9, Team 2 Foundation_Sprint 44, Team 2 Foundation_Sprint 45
OpenSSL 3.0.0-alpha1 was released and we tried it with our internal CI. It works fine but Qt uses some deprecated functions.
This prevents us to use "no-deprecated" configure flag of OpenSSL.
ssl/qsslsocket_openssl_symbols.cpp:149: error: undefined reference to 'RSA_bits' ssl/qsslsocket_openssl_symbols.cpp:150: error: undefined reference to 'DSA_bits' ssl/qsslsocket_openssl_symbols.cpp:187: error: undefined reference to 'DH_bits' ssl/qsslsocket_openssl_symbols.cpp:434: error: undefined reference to 'SSL_CTX_load_verify_locations' ssl/qsslsocket_openssl_symbols.cpp:480: error: undefined reference to 'DH_check'
Would be great if this could be fixed.
Deprecation notice
https://github.com/openssl/openssl/blob/master/CHANGES.md
| For Gerrit Dashboard: QTBUG-83733 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 500906,1 | OpenSSL: move DH calls under OPENSSL_NO_DEPRECATED_3_0 guard | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: NEW | 0 | 0 |
| 299136,10 | Make OpenSSL back-end work with 3.0 alpha | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 301317,2 | Make OpenSSL back-end work with 3.0 alpha | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |
| 377315,6 | TLS plugin (OpenSSL): don't use the deprecated functions | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 377823,2 | TLS plugin (OpenSSL): don't use the deprecated functions | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 377824,2 | TLS plugin (OpenSSL): don't use the deprecated functions | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: ABANDONED | 0 | 0 |
| 500262,7 | OpenSSL: move DH calls under OPENSSL_NO_DEPRECATED_3_0 guard | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 500889,2 | OpenSSL: move DH calls under OPENSSL_NO_DEPRECATED_3_0 guard | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 500890,2 | OpenSSL: move DH calls under OPENSSL_NO_DEPRECATED_3_0 guard | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |